gcc/testsuite/g++.dg/parse/cond4.C
// PR c++/38635
// { dg-do compile }

void foo()                                                                                                                              
{                                                                                                                                       
  if (struct A{}// { dg-error "" }
